Fix padding issue for search result on mobile

--- a/foodie-frontend/src/styles/style.css
+++ b/foodie-frontend/src/styles/style.css
@@ -409,7 +409,7 @@ a {
   .search-result {
     min-width: 0;
     flex: 0;
-    padding: 25px 15px 25px 15px;
+    padding: 15px 15px 25px 15px;
   }
 
   .standard-btn {
